--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>YOUR COMPANY</title>
-    <link rel="icon" type="image/png" href="/images/avata/tran-trieu-vy-avatar.png">
+    <link rel="icon" type="image/png" href="images/avata/tran-trieu-vy-avatar.png">
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
@@ -29,10 +29,10 @@
                 <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/index.html">TRANG CHỦ</a>
+                            <a class="nav-link" aria-current="page" href="index.html">TRANG CHỦ</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/temple/about.html">GIỚI THIỆU</a>
+                            <a class="nav-link" href="temple/about.html">GIỚI THIỆU</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">DỰ ÁN</a>
@@ -83,7 +83,7 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/images/slide/slide-2.png" class="img-fluid d-block w-100" alt="...">
+                    <img src="images/slide/slide-2.png" class="img-fluid d-block w-100" alt="...">
                     <div class="carousel-caption d-flex justify-content-center align-items-center h-100">
                         <div>
                             <h1>THIẾT KẾ KIẾN TRÚC CẢNH QUAN</h1>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/slide/slide-4.png" class="img-fluid d-block w-100" alt="...">
+                    <img src="images/slide/slide-4.png" class="img-fluid d-block w-100" alt="...">
                     <div class="carousel-caption d-flex justify-content-center align-items-center h-100">
                         <div>
                             <h1>XÂY DỰNG HOÀN THIỆN</h1>
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="/images/slide/slide-3.png" class="img-fluid d-block w-100" alt="...">
+                    <img src="images/slide/slide-3.png" class="img-fluid d-block w-100" alt="...">
                     <div class="carousel-caption d-flex justify-content-center align-items-center h-100">
                         <div>
                             <h1>KIẾN TẠO CUỘC SỐNG</h1>
@@ -140,7 +140,7 @@
                     <div class="line-header"></div>
                 </div>
                 <div class="main__header_info col-md-6 text-start about-body px-5">
-                    <img src="/images/avata/tran-trieu-vy-avatar.png" width="150px" alt="" class="img-fluid">
+                    <img src="images/avata/tran-trieu-vy-avatar.png" width="150px" alt="" class="img-fluid">
                     <div>
                         <h5 class="pb-3">TRẦN XUÂN CHIẾN</h5>
                         <h6>NGƯỜI SÁNG LẬP</h6>
@@ -155,7 +155,7 @@
         <div class="container">
             <div class="row py-5">
                 <div class="col-md-6 text-end about-body px-5 border-start border-end d-flex align-items-center">
-                    <img src="/images/main/lang-thong-dong-masterplan.png" class="img-fluid">
+                    <img src="images/main/lang-thong-dong-masterplan.png" class="img-fluid">
                 </div>
                 <div class="main__info col-md-6 pt-4 border-end">
                     <div class="row d-flex align-items-center">
@@ -164,7 +164,7 @@
                             <h1>NAME COMPANY</h1>
                         </div>
                         <div class="col-md-6">
-                            <img src="/images/main/tree.png" class="img-fluid">
+                            <img src="images/main/tree.png" class="img-fluid">
                         </div>
                     </div>
                     <div class="row">
@@ -251,56 +251,56 @@
             </div>
             <div class="row">
                 <div class="col-md-3 p-0 position-relative">
-                    <img src="/images/main/vien-le-jardin-720x720.png" class="img-fluid img-hover">
+                    <img src="images/main/vien-le-jardin-720x720.png" class="img-fluid img-hover">
                     <div class="project__info">
                         <h3 class="underline-hover">KHU NHÀ THỦ ĐỨC</h3>
                         <h4>100 X 100 M²</h4>
                     </div>
                 </div>
                 <div class="col-md-3 p-0 position-relative">
-                    <img src="/images/main/onsen-go-vap-720x720.png" class="img-fluid img-hover">
+                    <img src="images/main/onsen-go-vap-720x720.png" class="img-fluid img-hover">
                     <div class="project__info">
                         <h3 class="underline-hover">ONSEN GÒ VẤP</h3>
                         <h4>300 X 300 M²</h4>
                     </div>
                 </div>
                 <div class="col-md-3 p-0 position-relative">
-                    <img src="/images/main/nha-mau-khu-10-lang-thong-dong.jpg" class="img-fluid img-hover">
+                    <img src="images/main/nha-mau-khu-10-lang-thong-dong.jpg" class="img-fluid img-hover">
                     <div class="project__info">
                         <h3 class="underline-hover">NHÀ MẪU LÀNG THONG DONG</h3>
                         <h4>100 X 100 M²</h4>
                     </div>
                 </div>
                 <div class="col-md-3 p-0 position-relative">
-                    <img src="/images/main/penthouse-opal-tower-feature-img.png" class="img-fluid img-hover">
+                    <img src="images/main/penthouse-opal-tower-feature-img.png" class="img-fluid img-hover">
                     <div class="project__info">
                         <h3 class="underline-hover">Penthouse opal tower</h3>
                         <h4>100 X 100 M²</h4>
                     </div>
                 </div>
                 <div class="col-md-3 p-0 position-relative">
-                    <img src="/images/main/vien-le-jardin-720x720.png" class="img-fluid img-hover">
+                    <img src="images/main/vien-le-jardin-720x720.png" class="img-fluid img-hover">
                     <div class="project__info">
                         <h3 class="underline-hover">KHU NHÀ THỦ ĐỨC</h3>
                         <h4>100 X 100 M²</h4>
                     </div>
                 </div>
                 <div class="col-md-3 p-0 position-relative">
-                    <img src="/images/main/onsen-go-vap-720x720.png" class="img-fluid img-hover">
+                    <img src="images/main/onsen-go-vap-720x720.png" class="img-fluid img-hover">
                     <div class="project__info">
                         <h3 class="underline-hover">ONSEN GÒ VẤP</h3>
                         <h4>300 X 300 M²</h4>
                     </div>
                 </div>
                 <div class="col-md-3 p-0 position-relative">
-                    <img src="/images/main/nha-mau-khu-10-lang-thong-dong.jpg" class="img-fluid img-hover">
+                    <img src="images/main/nha-mau-khu-10-lang-thong-dong.jpg" class="img-fluid img-hover">
                     <div class="project__info">
                         <h3 class="underline-hover">NHÀ MẪU LÀNG THONG DONG</h3>
                         <h4>100 X 100 M²</h4>
                     </div>
                 </div>
                 <div class="col-md-3 p-0 position-relative">
-                    <img src="/images/main/penthouse-opal-tower-feature-img.png" class="img-fluid img-hover">
+                    <img src="images/main/penthouse-opal-tower-feature-img.png" class="img-fluid img-hover">
                     <div class="project__info">
                         <h3 class="underline-hover">Penthouse opal tower</h3>
                         <h4>100 X 100 M²</h4>
@@ -399,7 +399,7 @@
                     </ul>
                 </div>
                 <div class="col-md-6 image-section">
-                    <img src="/images/main/banner-front-page-2048x1366.png" alt="Giá trị cốt lõi"
+                    <img src="images/main/banner-front-page-2048x1366.png" alt="Giá trị cốt lõi"
                         class="img-fluid">
                 </div>
             </div>
@@ -424,7 +424,7 @@
                 <div class="row main__blog_info">
                     <div class="col-md-4">
                         <a href="">
-                            <img src="/images/main/kien-truc-su-avt-405x228.png" class="img-fluid">
+                            <img src="images/main/kien-truc-su-avt-405x228.png" class="img-fluid">
                             <div class="blog__info">
                                 <h5 class="underline-hover py-3">Kiến trúc sư là gì? Công việc, vai trò & nhiệm vụ</h5>
                             </div>
@@ -432,7 +432,7 @@
                     </div>
                     <div class="col-md-4">
                         <a href="">
-                            <img src="/images/main/kien-truc-art-deco-avt-405x228.png" class="img-fluid">
+                            <img src="images/main/kien-truc-art-deco-avt-405x228.png" class="img-fluid">
                             <div class="blog__info">
                                 <h5 class="underline-hover py-3">Kiến trúc Art Deco: Lịch sử phát triển & các công trình
                                     đặc
@@ -442,7 +442,7 @@
                     </div>
                     <div class="col-md-4">
                         <a href="">
-                            <img src="/images/main/vuon-hoa-hong-405x270.png" class="img-fluid">
+                            <img src="images/main/vuon-hoa-hong-405x270.png" class="img-fluid">
                             <div class="blog__info">
                                 <h5 class="underline-hover py-3">Hướng dẫn trồng và chăm sóc hoa hồng trong chậu đúng kỹ
                                     thuật</h5>
@@ -451,7 +451,7 @@
                     </div>
                     <div class="col-md-4">
                         <a href="">
-                            <img src="/images/main/kien-truc-su-avt-405x228.png" class="img-fluid">
+                            <img src="images/main/kien-truc-su-avt-405x228.png" class="img-fluid">
                             <div class="blog__info">
                                 <h5 class="underline-hover py-3">Kiến trúc sư là gì? Công việc, vai trò & nhiệm vụ</h5>
                             </div>
@@ -459,7 +459,7 @@
                     </div>
                     <div class="col-md-4">
                         <a href="">
-                            <img src="/images/main/kien-truc-art-deco-avt-405x228.png" class="img-fluid">
+                            <img src="images/main/kien-truc-art-deco-avt-405x228.png" class="img-fluid">
                             <div class="blog__info">
                                 <h5 class="underline-hover py-3">Kiến trúc Art Deco: Lịch sử phát triển & các công trình
                                     đặc
@@ -469,7 +469,7 @@
                     </div>
                     <div class="col-md-4">
                         <a href="">
-                            <img src="/images/main/vuon-hoa-hong-405x270.png" class="img-fluid">
+                            <img src="images/main/vuon-hoa-hong-405x270.png" class="img-fluid">
                             <div class="blog__info">
                                 <h5 class="underline-hover py-3">Hướng dẫn trồng và chăm sóc hoa hồng trong chậu đúng kỹ
                                     thuật</h5>
@@ -554,7 +554,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
         crossorigin="anonymous"></script>
-    <script src="/js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
