--- a/temple/about.html
+++ b/temple/about.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 </head>
@@ -29,7 +29,7 @@
                 <div class="collapse navbar-collapse text-center" id="navbarSupportedContent">
                     <ul class="navbar-nav mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="/index.html">TRANG CHỦ</a>
+                            <a class="nav-link" aria-current="page" href="index.html">TRANG CHỦ</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="temple/about.html">GIỚI THIỆU</a>
@@ -71,7 +71,7 @@
 
     <section class="pt-5 mt-5 text-center">
         <h1>ĐANG PHÁT TRIỂN</h1>
-        <img src="/images/slide/slide-2.png" class="img-fluid d-block w-100" alt="...">
+        <img src="images/slide/slide-2.png" class="img-fluid d-block w-100" alt="...">
     </section>
 
 
