--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
         </nav>
     </section>
     
-
     <!--========== SLIDE======= -->
     <section>
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="5000">
@@ -128,7 +127,6 @@
             </button>
         </div>
     </section>
-    
 
     <!--========== main header======= -->
     <section class="main__header">
@@ -309,7 +307,6 @@
             </div>
         </div>
     </section>
-
 
     <!--========== main PROCESS======= -->
     <section class="main__proces">
@@ -526,10 +523,10 @@
                     <!-- Yêu cầu báo giá -->
                     <div class="col-md-4">
                         <h4 class="footer-heading">Yêu Cầu Báo Giá</h4>
-                        <p class="hotline">Hotline: 0903 957 033</p>
+                        <p class="hotline">Hotline: 213123</p>
                         <a href="#" class="btn btn-bao-gia">Gửi Yêu Cầu Báo Giá</a>
-                        <p class="pt-5">Chứng chỉ Năng lực Hoạt động Xây dựng Cấp III. Số: HCM-00046954, cấp ngày
-                            19/10/2020 tại Sở Kế hoạch và Đầu tư thành phố Hồ Chí Minh.</p>
+                        <p class="pt-5">Chứng chỉ Năng lực Hoạt động Xây dựng Cấp III. Số: 123, cấp ngày
+                            19/10/2020 tại Sở Kế hoạch và Đầu tư thành phố 123.</p>
                     </div>
                 </div>
 
